// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTime Snapshots parses dates 1`] = `
<div
  className="text-muted"
>
  -
</div>
`;

exports[`DateTime Snapshots parses dates 2`] = `
<div
  className="text-muted"
>
  No content
</div>
`;

exports[`DateTime Snapshots parses dates 3`] = `
<div
  className="text-muted"
>
  -
</div>
`;

exports[`DateTime Snapshots parses dates 4`] = `
<div
  className="text-muted"
>
  -
</div>
`;

exports[`DateTime Snapshots parses dates 5`] = `
<div>
  07/02/2018
</div>
`;

exports[`DateTime Snapshots parses dates 6`] = `
<div>
  08/02/2018
</div>
`;

exports[`DateTime Snapshots parses dates 7`] = `
<div>
  1st Jan 2017 10:00am - 1st Feb 2017 10:00am
</div>
`;

exports[`DateTime Snapshots parses dates 8`] = `
<div>
  1st Jan 2017 10:00am - 1st Feb 2017 10:00am
</div>
`;

exports[`DateTime Snapshots parses dates 9`] = `
<div>
  1st Jan 2017 10:00am to 1st Feb 2017 10:00am
</div>
`;
